fix modal z-index

--- a/FrontEnd/css/modal.css
+++ b/FrontEnd/css/modal.css
@@ -31,7 +31,7 @@ body {
   min-height: 500px;
   overflow: auto;
 
-  z-index: 200;
+  z-index: 1000;
   background-color: rgba(238, 238, 238, 0.7);
 }
 
